syntax = "proto3";

option go_package = "github.com/smartcontractkit/chainlink/core/services/workflows/pb/";

package pb;

message WorkflowMetadata {
  string workflowOwner = 1;
  string workflowName = 2;
  string version = 3;
  string workflowID = 4;
  string workflowExecutionID = 5;
  int32 donID = 6;
  int32 donF = 7;
  int32 donN = 8;
  int32 donQ = 9;
  string p2pID = 10;
} 